Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Sentinel</h1>
-        <p>distributed systems, real-time data mining, stream mining</p>
+        <p>distributed systems, real-time data stream mining, stream mining, data stream, big data stream, </p>
 
         <p class="view"><a href="https://github.com/ambodi/sentinel">View the Project on GitHub <small>ambodi/sentinel</small></a></p>
 
@@ -28,10 +28,7 @@
         </ul>
       </header>
       <section>
-        <h1>
-<a name="sentinel" class="anchor" href="#sentinel"><span class="octicon octicon-link"></span></a>Sentinel</h1>
-
-<p>Sentinel consists of set of classes to perform real-time stream mining on Twitter Public Stream using <a href="http://samoa-project.net/">SAMOA</a>. </p>
+        <p><strong>Sentinel</strong> is project written in Java to perform real-time stream mining on Twitter Public Stream using <a href="http://samoa-project.net/">SAMOA</a> and <a href="https://storm.incubator.apache.org/">Apache Storm</a>. Sentinel is a distributed system that aims to use new distributed algorithms. Currently Sentinel only performs real-time distributed system. See <code>Tasks</code> section for details on how to work with Sentinel.</p>
 
 <h2>
 <a name="components" class="anchor" href="#components"><span class="octicon octicon-link"></span></a>Components</h2>
