--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Sentinel : distributed systems, real-time data stream mining, stream mining, data stream, big data stream, ">
+    <title>Sentinel by ambodi</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Sentinel</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Sentinel</h1>
+        <p>distributed systems, real-time data stream mining, stream mining, data stream, big data stream, </p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ambodi/sentinel">View on GitHub</a>
+        <p class="view"><a href="https://github.com/ambodi/sentinel">View the Project on GitHub <small>ambodi/sentinel</small></a></p>
 
-          <h1 id="project_title">Sentinel</h1>
-          <h2 id="project_tagline">distributed systems, real-time data stream mining, stream mining, data stream, big data stream, </h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ambodi/sentinel/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ambodi/sentinel/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/ambodi/sentinel/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ambodi/sentinel/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ambodi/sentinel">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <p><strong>Sentinel</strong> is project written in Java to perform real-time stream mining on Twitter Public Stream using <a href="http://samoa-project.net/">SAMOA</a> and <a href="https://storm.incubator.apache.org/">Apache Storm</a>. Sentinel is a distributed system that aims to use new distributed algorithms. Currently Sentinel only performs real-time distributed system. See <code>Tasks</code> section for details on how to work with Sentinel.</p>
 
 <h2>
@@ -165,17 +162,12 @@ Clone [Sentinel]</p>
 <p>The use and distribution terms for this software are covered by the
 Apache License, Version 2.0 (<a href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>).</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Sentinel maintained by <a href="https://github.com/ambodi">ambodi</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/ambodi">ambodi</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
