Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 <h2>
 <a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Install</h2>
 
-<p>Clone <a href="https://github.com/ambodi/samoa">SAMOA fork for Sentinel</a>
-Clone [Sentinel]</p>
+<p>Clone <a href="https://github.com/ambodi/samoa">SAMOA fork for Sentinel</a></p>
 
 <pre><code>git clone https://github.com/ambodi/samoa
 </code></pre>
